<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/rounded">

        <Button
            android:id="@+id/btn"
            android:layout_width="165dp"
            android:layout_height="39dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="#f1f1f1"
            android:elevation="8dp"
            android:stateListAnimator="@null"
            android:text="@string/details"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:translationZ="8dp"
            app:cornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/firstImage" />

        <TextView
            android:id="@+id/description"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="4dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/release_date"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginEnd="140dp"
            android:layout_marginBottom="8dp"
            android:text="@string/release"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/description" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:text="@string/movieName"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintStart_toStartOf="@+id/description"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/firstImage"
            android:layout_width="120dp"
            android:layout_height="133dp"
            android:layout_margin="6dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.272"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#CCCCCC"
        app:layout_constraintTop_toBottomOf="parent"
        app:cornerRadius="20dp"/>
</com.google.android.material.card.MaterialCardView>